2007-12-24  Akim Demaille  <demaille@gostai.com>

	parser.mk from k2.
	* src/parser/parser.mk (CLEANFILES): Add *xml.

2007-12-24  Akim Demaille  <demaille@gostai.com>

	Don't depend on output-to-dot.
	* src/parser/parser.mk: here, since we don't use it.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Declare vars in generated code.
	* src/ucommand.cc: Here when writting the result of a remote
	  function call.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	loadFile uses std::cin if /dev/stdin is passed.
	* src/userver.cc: Here.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	Backport SC_UCONSOLE mode.
	* src/parser/utoken.l: From k2.

2007-12-21  mefyl  <mefyl@lrde.epita.fr>

	Document.
	* include/kernel/userver.hh: Document and reorder time members.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	No color for the buildfarm.
	* Makefile.am (CHECK_BUILDFARM_FLAGS): New.
	Use it.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Fix bug from var-lookup.chk.
	* src/ucommand.cc: Check if a variable is inherited && do not display
	  the "undeclared variable" warning.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	make check-buildfarm.
	* Makefile.am (check-buildfarm): New.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	Update tests.
	* tests-local.mk (TESTS_DIRS): Define it.

2007-12-21  Guillaume Deslandes  <deslandes@gostai.com>

	Add 1.x to default test directories, update tests.
	* tests-local.mk: Here.

2007-12-21  Matthieu Nottale  <nottale@gostai.com>

	Cosmetic changes.
	* src/console-server.cc: Here.

2007-12-20  Guillaume Deslandes  <deslandes@gostai.com>

	Update KNOWN_BUGS.
	* KNOWN_BUGS: Here.
	Previously specified URBI bugs not longer exist.
	UObject notify bug explaination augmented.

2007-12-19  Guillaume Deslandes  <deslandes@gostai.com>

	Remove warning at alias use.
	* src/uvariablename.cc: Here.

2007-12-19  Guillaume Deslandes  <deslandes@gostai.com>

	Fix "return after emit" bug and 1.x/lazy-test-eval test.